#
#   ----------------------------------------------------------------------
# * 0.05-1 (in progress)
#   ----------------------------------------------------------------------
#
#    - feature: added more variants of the pps graph(s) 
#    - bugfix: fix for vlan on hp switches
#    - bugfix: fix on StandardizeSNMPOutputBehaviour for unixsnmp mode where the oid was cleaned of the output
#
#   ----------------------------------------------------------------------
# * 0.05
#   ----------------------------------------------------------------------
#
#    - enhancement: support of ifDescr in HEX-String (i.e. ifDescr used by Windows SNMP-Service in case 
#                   of umlauts) (by Enfileyb)
#    - enhancement: snmpsim recorder reorg and update
#    - enhancement: more tolerancy for unaccessible oids
#    - enhancement: config table enhancements (exclusions reviewed: no repetitions in non global 
#                   exclusion for globally excluded interfaces, other messages not displayed for 
#                   excluded interfaces)
#    - enhancement: snmp functions merge and standardization: now 2 functions (get and walk), 
#                   returning a hash of oids and values
#    - enhancement: snmp functions enhancement: 
#                      * can receive multiple oids as arguments, 
#                      * new cache storage methods (based on Storable library), 
#                      * exceptions (errors) handling, including oid details on error
#                      * unixsnmp now use exclusively snmpget/snmpbulkget instead of perl bindings
#                      * result hash can be built with indexes as keys (outputhashkeyidx param)
#                      * result hash empty check (checkempty param)
#                      * results concatened by key when querying multiple oids
#    - enhancement: link to html table now persistent when exist, even in case of an UNKNOWN 
#                   error (ex: when target not accessible)