@@ -11,6 +11,7 @@
 # 2012-08-26 v0.02   Y. Charton    Added hexToString and stringToHex
 #                                  Some conversion functions
 # 2013-02-07 v0.03   Y. Charton    Added log to file, changed volume formating
+# 2013-10-15 v0.04   Y. Charton    Denormalize func fix when text empty
 #
 ##############################################################################
 
@@ -422,6 +423,9 @@ sub normalize {
 sub denormalize {
     my $Text=shift;
     $Text=~s/Q../pack "H2",substr($&,1,3)/ge;
+    if (not defined $Text) {
+        $Text = "";
+    }
     return $Text;
 }
 
